Replaced Growthcurve aurora by fig 3.58 of Daniels thesis. Misc cosmetic changes in text

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1113,9 +1113,9 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 \centering
 		\begin{overpic}[width=.95\linewidth]{images/allMasterTrees.pdf}
 		\end{overpic}
-\caption[All cell lineages located in the master cell file of the five wild type datasets and the aurora mutant.]
+\caption[All cell lineages located in the master cell file of the five wild type datasets and the \emph{aurora} mutant.]
 {
-{\bf All cell lineages located in the master cell file of the five wild type datasets and the aurora mutant.} The left labels show the time points and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}.
+{\bf All cell lineages located in the master cell file of the five wild type datasets and the \emph{aurora} mutant.} The left labels show the time points and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}.
 }
 	\label{fig:allMasterTrees}
 \end{figure}
@@ -1126,9 +1126,9 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 \centering
 		\begin{overpic}[width=1.\linewidth]{images/allTrees.pdf}
 		\end{overpic}
-\caption[All cell lineages of the five wild type datasets and the aurora mutant.]
+\caption[All cell lineages of the five wild type datasets and the \emph{aurora} mutant.]
 {
-{\bf All cell lineages of the five wild type datasets and the aurora mutant.} The left labels show the time points and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. The bricks visualisation at the bottom of each tree allows a comparison of division sequences among several trees.
+{\bf All cell lineages of the five wild type datasets and the \emph{aurora} mutant.} The left labels show the time points and an additional one at the top of each tree displays the total number of divisions. The colour of the nodes indicates the kind of division: \textcolor{red}{anticlinal}, \textcolor{green}{periclinal} and \textcolor{blue}{radial}. The bricks visualisation at the bottom of each tree allows a comparison of division sequences among several trees.
 }
 	\label{fig:allTrees}
 \end{sidewaysfigure}
@@ -1172,9 +1172,9 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 \centering
 		\begin{overpic}[width=1.\linewidth]{images/treeDivisionSequences.pdf}
 		\end{overpic}
-\caption[Division sequence trees for all five wild type datasets and the aurora mutant based on the number of time steps.]
+\caption[Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of time steps.]
 {
-{\bf Division sequence trees for all five wild type datasets and the aurora mutant based on the number of time steps.} \TODO{update tree of aurora}The x-axis corresponds to the number of time steps. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
+{\bf Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of time steps.} \TODO{update tree of \emph{aurora}}The x-axis corresponds to the number of time steps. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
 	\label{fig:treeDivisionSequences}
 \end{figure}
 %
@@ -1184,9 +1184,9 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 \centering
 		\begin{overpic}[width=1.\linewidth]{images/treeDivisionSequencesCells.pdf}
 		\end{overpic}
-\caption[Division sequence trees for all five wild type datasets and the aurora mutant based on the number of cells.]
+\caption[Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of cells.]
 {
-{\bf Division sequence trees for all five wild type datasets and the aurora mutant based on the number of cells.} \TODO{update tree of aurora}The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
+{\bf Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of cells.} \TODO{update tree of \emph{aurora}}The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
 	\label{fig:treeDivisionSequencesCells}
 \end{figure}
 %
@@ -1225,18 +1225,30 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 	\label{fig:divrules}
 \end{figure}
 %
-\clearpage
+%\clearpage
+%
+%\begin{figure}[htbp]
+%\centering
+%	\begin{overpic}[width=0.65\linewidth]{images/GrowthCurveAurora.pdf}
+%	\end{overpic}
+%\caption[Growth profile of the lateral root primordia in the \emph{aurora} mutant.]
+%{{\bf Growth profile of the lateral root primordia in the \emph{aurora} mutant.} The number of cells over time is represented for the \emph{aurora} mutant in red, the growth profiles of the wild type datasets are also represented (\emph{grayed}). The mutant is growing slower.}
+%	\label{fig:growthcurveaurora}
+%\end{figure}
+%
+%\clearpage
 %
 \begin{figure}[htbp]
 \centering
-	\begin{overpic}[width=0.65\linewidth]{images/GrowthCurveAurora.pdf}
+	\begin{overpic}[width=0.65\linewidth]{images/LRP-auroraRAW.pdf}
 	\end{overpic}
-\caption[Growth profile of the lateral root primordia in the \emph{aurora} mutant.]
-{{\bf Growth profile of the lateral root primordia in the \emph{aurora} mutant.} The number of cells over time is represented for the \emph{aurora} mutant in red, the growth profiles of the wild type datasets are also represented (\emph{grayed}). The mutant is growing slower.}
-	\label{fig:growthcurveaurora}
+\caption[Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. ]
+{{\bf Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. } Single slice of the master cell file in dataset #131203 at indicated time points. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (A-C) The cell divided without building a cell wall. (D-F) Both daughter cells divided periclinal and their cell walls connected in the center creating two binucleated cells. (G) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$m.}
+	\label{fig:aurora}
 \end{figure}
 \clearpage
 %
+
 \begin{figure}[htbp]
 \centering
 	\begin{overpic}[width=1.\linewidth]{images/LRP-RawDataSets-131203_compressed.pdf}
@@ -1316,7 +1328,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 \subsection{Supporting Datasets}
 \label{sec:datasets}
 \noindent
-In this section, we briefly explain the file formatting of the generated and analysed VLR files stored in the \textit{*.csv} format. In total, there are five wild type datasets (\#120830WT.csv, \#121204WT.csv, \#121211WT.csv, \#130508WT.csv, \#130607WT.csv) and the aurora mutant (auroraMutant.csv). As already explained in section~\ref{sec:segmentation}, for each cell, we only store the position of the first and the last frame before it divides. This means that for each cell a pair of lines is stored referring to the first and last tracked frame. In the program, the positions in between are interpolated linearly. All files share the same header information which are explained below:
+In this section, we briefly explain the file formatting of the generated and analysed VLR files stored in the \textit{*.csv} format. In total, there are five wild type datasets (\#120830WT.csv, \#121204WT.csv, \#121211WT.csv, \#130508WT.csv, \#130607WT.csv) and the \emph{aurora} mutant (auroraMutant.csv). As already explained in section~\ref{sec:segmentation}, for each cell, we only store the position of the first and the last frame before it divides. This means that for each cell a pair of lines is stored referring to the first and last tracked frame. In the program, the positions in between are interpolated linearly. All files share the same header information which are explained below:
 
 \noindent
 \begin{tabularx}{\textwidth}{@{} >{\RaggedRight}p{2.8cm} X @{}}
