forgot a few things and fixed syntax errors...

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1243,7 +1243,7 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 	\begin{overpic}[width=0.65\linewidth]{images/LRP-auroraRAW.pdf}
 	\end{overpic}
 \caption[Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. ]
-{{\bf Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. } Single slice of the master cell file in dataset #131203 at indicated time points. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (A-C) The cell divided without building a cell wall. (D-F) Both daughter cells divided periclinal and their cell walls connected in the center creating two binucleated cells. (G) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$illm.}
+{{\bf Altered cell divisions in the \emph{aur1-2 aur2-2} double mutant. } Single slice of the master cell file in dataset \#131203 at indicated time points. Raw data on the left and a sketch of the plasmamembrane and nuclei on the right. (A-C) The cell divided without building a cell wall. (D-F) Both daughter cells divided periclinal and their cell walls connected in the center creating two binucleated cells. (G) The next cell divisions appear more or less arbitrarily. Scale bar: 20 $\mu$illm.}
 	\label{fig:aurora}
 \end{figure}
 \clearpage
