--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1171,27 +1171,27 @@ $\#$ RD & 8 & 7 & 15 & 7 & 13\\
 %
 \clearpage
 %
-\begin{figure}[htbp]
+\begin{sidewaysfigure}
 \centering
 		\begin{overpic}[width=1.\linewidth]{images/treeDivisionSequences.pdf}
 		\end{overpic}
 \caption[Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of time steps.]
 {
-{\bf Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of time steps.} \TODO{update tree of \emph{aurora}}The x-axis corresponds to the number of time steps. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
+{\bf Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of time steps.} The x-axis corresponds to the number of time steps. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
 	\label{fig:treeDivisionSequences}
-\end{figure}
+\end{sidewaysfigure}
 %
 \clearpage
 %
-\begin{figure}[htbp]
+\begin{sidewaysfigure}
 \centering
 		\begin{overpic}[width=1.\linewidth]{images/treeDivisionSequencesCells.pdf}
 		\end{overpic}
 \caption[Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of cells.]
 {
-{\bf Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of cells.} \TODO{update tree of \emph{aurora}}The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
+{\bf Division sequence trees for all five wild type datasets and the \emph{aurora} mutant based on the number of cells.} The x-axis corresponds to the number of cells. The colours are uniquely assigned to each type of layering which is given by a sequence of the divisions. Links to movies depicting layer formations for each dataset are listed in Section~\ref{sec:suppmovies}.}
 	\label{fig:treeDivisionSequencesCells}
-\end{figure}
+\end{sidewaysfigure}
 %
 \clearpage
 
