Inserted modified figure and replaced movie link to youtube

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -1348,7 +1348,7 @@ Aurora mutant & - & 129 & 56 & 50 & 21\\
     \item Time lapse recording \#130508 \href{http://youtu.be/GApOwRMWmUU}{\textcolor{blue}{[LINK]}}.
     \item Time lapse recording \#130607 \href{http://youtu.be/cFemfGbI5yA}{\textcolor{blue}{[LINK]}}.
   \end{Itemize}
-  \item Virtual lateral roots datasets \href{http://youtu.be/EXIp3H0y5UI}{\textcolor{blue}{[LINK]}}.
+  \item Virtual lateral roots datasets \href{https://youtu.be/JbXwgQ3P6h4}{\textcolor{blue}{[LINK]}}.
   \item Synchronisation on the number of cells, radial view \href{http://youtu.be/YZFkpcnyjiY}{\textcolor{blue}{[LINK]}}.
   \item Average growth tensor for 20 steps. Corresponds to Figure 2B (main text) \href{https://youtu.be/t2hpMR6VFIg}{\textcolor{blue}{[LINK]}}.
   \item Layers formation in all datasets:
